SERVER-54480 Fix index key rehydration in SBE