jstests/core/hashed_index_collation.js
@@ -6,7 +6,6 @@
  * @tags: [
  *   assumes_unsharded_collection,
  *   requires_find_command,
- *   sbe_incompatible,
  * ]
  */
 (function() {
